commit translated contents

--- a/hololens/breadcrumb/toc.yml
+++ b/hololens/breadcrumb/toc.yml
@@ -1,7 +1,7 @@
-- name: Docs
+- name: Documentos
   tocHref: /
   topicHref: /
   items:
-    - name: Hololens
+    - name: HoloLens
       tocHref: /hololens
       topicHref: /hololens/index
