commit translated contents

--- a/hololens/index.yml
+++ b/hololens/index.yml
@@ -11,17 +11,19 @@ metadata:
   ms.author: v-todmc
   ms.date: 5/22/2020
   ms.assetid: 0947f5b3-8f0f-42f0-aa27-6d2cad51d040
-  ms.openlocfilehash: 7afce81a15745b6ece3707972e6f8b5d82ba17ff
-  ms.sourcegitcommit: 44de31c6d3534b6e0b73ddc2a9336147daf7a41d
+  ms.openlocfilehash: 23cac991786c5540d7dadfcaae7ba2fe1d84dc64
+  ms.sourcegitcommit: 58812149a9795b46799845e89f98d4cfd72ded42
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 09/25/2020
-  ms.locfileid: "11078369"
+  ms.lasthandoff: 10/08/2020
+  ms.locfileid: "11105392"
 landingContent:
 - title: Visão geral do HoloLens
   linkLists:
   - linkListType: overview
     links:
+    - text: Visão geral do HoloLens 2
+      url: hololens2-options.md
     - text: Hardware do HoloLens 2
       url: hololens2-hardware.md
     - text: Hardware do HoloLens (1ª gen)
@@ -80,12 +82,10 @@ landingContent:
       url: app-deploy-store-business.md
     - text: Pacote de provisionamento
       url: app-deploy-provisioning-package.md
-- title: Manter
+- title: Guia de Manutenção e Solução de problemas
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: Gerenciar atualizações do HoloLens
-      url: hololens-updates.md
     - text: Solucionar problemas do HoloLens
       url: hololens-troubleshooting.md
     - text: Reiniciar, redefinir ou recuperar o HoloLens 2
@@ -96,6 +96,8 @@ landingContent:
       url: hololens-known-issues.md
     - text: Coletar e usar informações de diagnóstico de dispositivos HoloLens
       url: hololens-diagnostic-logs.md
+    - text: Gerenciar atualizações do HoloLens
+      url: hololens-updates.md
 - title: Notas de Versão e Comentários
   linkLists:
   - linkListType: whats-new
@@ -118,10 +120,6 @@ landingContent:
       url: https://docs.microsoft.com/dynamics365/mixed-reality/guides/
     - text: Realidade Mistura do Dynamics 365 da Microsoft
       url: https://docs.microsoft.com/dynamics365/mixed-reality/
-    - text: Visão geral de Serviços na Nuvem
-      url: https://docs.microsoft.com/windows/mixed-reality/mixed-reality-cloud-services#overview
-- title: Mais recursos
-  linkLists:
   - linkListType: how-to-guide
     links:
     - text: O que é a Realidade Misturada?
@@ -130,5 +128,15 @@ landingContent:
       url: https://docs.microsoft.com/windows/mixed-reality/design
     - text: Introdução à implantação da Realidade Misturada
       url: https://docs.microsoft.com/windows/mixed-reality/development?tabs=unity
+    - text: Visão geral de Serviços na Nuvem
+      url: https://docs.microsoft.com/windows/mixed-reality/mixed-reality-cloud-services#overview
+- title: Suporte
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: Comprar o HoloLens
+      url: https://www.microsoft.com/hololens/buy
+    - text: Suporte a Comunidades
+      url: https://holodevelopersslack.azurewebsites.net/
     - text: Contate o Suporte
       url: https://support.serviceshub.microsoft.com/supportforbusiness/create?sapId=e9391227-fa6d-927b-0fff-f96288631b8f
