commit translated contents

--- a/hololens/index.yml
+++ b/hololens/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: v-todmc
   ms.date: 5/22/2020
   ms.assetid: 0947f5b3-8f0f-42f0-aa27-6d2cad51d040
-  ms.openlocfilehash: d985c89a3352f1fcd8967970a1211315403dca15
-  ms.sourcegitcommit: 8e2c268733adce2662bf320cf96ccfea5919425e
+  ms.openlocfilehash: 94adcd87aacdb1c7ca40a0142f5c5d5641505b2b
+  ms.sourcegitcommit: ea5fa6c970756025b77c00b4ea600d60ce033106
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 12/04/2020
-  ms.locfileid: "11195604"
+  ms.lasthandoff: 01/13/2021
+  ms.locfileid: "11268047"
 landingContent:
 - title: Visão geral do HoloLens
   linkLists:
@@ -44,6 +44,8 @@ landingContent:
       url: common-scenarios.md
     - text: Implantação do HoloLens 2 conectada à nuvem em escala com Assistência Remota
       url: hololens2-cloud-connected-overview.md
+    - text: Guia de implantação de clientes externos
+      url: hololens2-deployment-guide.md
     - text: Implantação segura offline
       url: hololens-common-scenarios-offline-secure.md
 - title: Preparar
@@ -116,9 +118,9 @@ landingContent:
       url: hololens-release-notes.md
     - text: Versão prévia do Insider para Microsoft HoloLens
       url: hololens-insider.md
-    - text: Faça comentários
+    - text: 'Enviar comentários '
       url: hololens-feedback.md
-- title: Serviços Adicionais.
+- title: Mais Serviços
   linkLists:
   - linkListType: reference
     links:
