--- a/hololens/index.yml
+++ b/hololens/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: v-todmc
   ms.date: 5/22/2020
   ms.assetid: 0947f5b3-8f0f-42f0-aa27-6d2cad51d040
-  ms.openlocfilehash: 196162764a236ef2b4d7a6d1337b86066dde7469
-  ms.sourcegitcommit: 5b0f0b5930f138afc6cc0e0b9869c3239f1352b2
+  ms.openlocfilehash: a2c1e27a22525366c4d5ffc4bc06e9931412a54a
+  ms.sourcegitcommit: fbc8ddb17e31fea8667ece43a511592b86ac3947
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 01/26/2021
-  ms.locfileid: "11301529"
+  ms.lasthandoff: 03/04/2021
+  ms.locfileid: "11385451"
 landingContent:
 - title: Visão geral do HoloLens
   linkLists:
@@ -26,9 +26,9 @@ landingContent:
       url: hololens2-options.md
     - text: Hardware do HoloLens 2
       url: hololens2-hardware.md
-    - text: Hardware do HoloLens (1ª gen)
-      url: hololens1-hardware.md
-    - text: Usar o Menu Iniciar e página inicial da realidade misturada
+    - text: Malha da Microsoft (Visualização)
+      url: /mesh/overview
+    - text: Usar o menu Iniciar e página inicial da realidade misturada
       url: holographic-home.md
     - text: Localizar, instalar e desinstalar aplicativos
       url: holographic-store-apps.md
