--- a/hololens/index.yml
+++ b/hololens/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: v-jjaswinski
   ms.date: 05/24/2021
   ms.assetid: 0947f5b3-8f0f-42f0-aa27-6d2cad51d040
-  ms.openlocfilehash: c0189c7a75ad27d6d301721e78de6391f6ac76f7
-  ms.sourcegitcommit: e9f746aa41139859edc12fbc21f926c9461da4b3
+  ms.openlocfilehash: 2d0d57406c0d8b1759c53bf5847d8369f98a865e
+  ms.sourcegitcommit: 2b541bacb32279ccec0d7b7caef216626634a2ad
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 09/13/2021
-  ms.locfileid: "126031894"
+  ms.lasthandoff: 09/28/2021
+  ms.locfileid: "129145923"
 landingContent:
 - title: Conheça o HoloLens 2
   linkLists:
@@ -68,6 +68,22 @@ landingContent:
       url: hololens2-corp-connected-overview.md
     - text: Guia de implantação – Seguro offline
       url: hololens-common-scenarios-offline-secure.md
+- title: Recursos do parceiro de Realidade Misturada
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: Recursos do parceiro de Realidade Misturada
+      url: https://www.microsoft.com/en-us/hololens/mixed-reality-partners
+    - text: Fórum do parceiro de Realidade Misturada
+      url: https://techcommunity.microsoft.com/t5/mixed-reality-partners/bd-p/MixedRealityPartnersForum
+    - text: Blog do parceiro de Realidade Misturada
+      url: https://aka.ms/MRPartnerBlog
+    - text: Comece a projetar e a criar protótipos
+      url: https://docs.microsoft.com/en-us/windows/mixed-reality/design/design
+    - text: Modo de plataforma móvel
+      url: /hololens/hololens2-moving-platform
+    - text: Considerações sobre o ambiente
+      url: /hololens/hololens-environment-considerations
 - title: Solução de problemas
   linkLists:
   - linkListType: how-to-guide
